--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="custom.css">
   </head>
   <body onLoad="createMap('map')">
-    <div id="map" style="width:100%;"></div>
+    <div id="map" style="width:100%;height:100%;"></div>
     <script src="custom.js"></script>
   </body>
 </html>
